# wildwoodag-v2

./: .gitignore  LICENSE  README.md  build-zip.sh  build.sh  capacitor.config.json  config.yaml  hugo.yaml  package-lock.json  package.json  prepare_native_app.py  pubcrank.yml  pyproject.toml  run_func.py
.github/workflows/: hugo.yml  release.yml
android/: capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
content/: _index.md  about.md  apps.md  archives.md  chat.md  contact.md  donate.md  embed-test.md  events-month.md  events.md  index.md  privacy.md  search.md  support.md  watch.md
content/blog/: _index.md
content/en-us/: about.md  donate.md  events.md  search.md  watch.md
content/post/: 2022-02-13-character-of-the-new-man.md  2022-02-20-seasons-of-prayer-and-fasting.md  2022-02-27-faith-by-my-works.md  2022-03-06-meditation-and-memorization-of-the-word-of-god.md  2022-03-13-but-the-greatest-of-these-is-love.md  2022-03-20-god-the-provider.md  2022-04-03-beauty-for-ashes.md  2022-04-10-sunday-is-on-the-way.md  2022-04-17-the-empty-tomb-says-it-all.md  2022-04-24-effective-fervent-prayer.md  2022-05-01-listening-is-a-skill.md  2022-05-08-honor-your-father-and-mother.md  2022-05-15-spiritual-inheritance.md  (+107 more)
mv/: download-posts.py  old-posts.json  post-template.md
src/: app.js  cal.js
static/: app.js  app.js.map  basic.ics  cal.css  church-health-tpl.xml  church-health.xml  overrides.css  release.json  service-worker.js  web.15591f28.js  web.15591f28.js.map  wildwood-tpl.xml  wildwood.xml
wwfunc/: project.yml
(+133 files in other folders)
